# Deadlock_Tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_openapi.json  assets_openapi.json  pyproject.toml  tmp_ranks.json
.github/workflows/: deploy.yml
apps/: discord_bot.py  web.py
deploy/: app.env.example  bootstrap-vps.sh  deploy.sh  docker-compose.yml  nginx.conf
src/deadlock_tracker/: __init__.py  config.py  models.py
src/deadlock_tracker/bot/: app.py
src/deadlock_tracker/bot/cogs/: __init__.py  stats.py
src/deadlock_tracker/clients/: __init__.py  deadlock_api.py
src/deadlock_tracker/presentation/: __init__.py  cards.py
src/deadlock_tracker/services/: __init__.py  player_service.py
src/deadlock_tracker/web/: __init__.py  app.py  view_models.py
src/deadlock_tracker/web/static/: site.css
src/deadlock_tracker/web/templates/: about.html  base.html  best_heroes.html  best_items.html  builds.html  credits.html  disclaimers.html  discord_bot.html  error.html  faq.html  hero_detail.html  hero_items.html  hero_matchups.html  hero_rank_distribution.html  heroes_directory.html  index.html  item_detail.html  items_directory.html  leaderboard_hero.html  leaderboard_region.html  leaderboards.html  match_detail.html  patch_note_detail.html  patch_notes.html  player.html  privacy_policy.html  rank_distribution.html  street_brawl_builds.html
tests/: test_player_service.py  test_web_launch_smoke.py
